crates/glyph-cli/tests/corpus/valid/return_row7_return_only_body.glyph
type Diagnosis = <"root cause and severity">

block analyze() -> Diagnosis
    flow:
        return diagnosis

skill diagnose()
    description: "Diagnose an issue."
    flow:
        analyze()
