crates/glyph-cli/tests/corpus/invalid/case-violation/param_annotation_snake_case.glyph
block foo(x: link_mode)
    description: "snake-case in param type position is illegal."
    flow:
        return x

skill demo(y = "v")
    description: "Carrier."
    flow:
        return foo(y)
